--- a/edu_core/pubspec.yaml
+++ b/edu_core/pubspec.yaml
@@ -20,4 +20,7 @@ environment:
 dev_dependencies:
   dependency_validator: 3.2.2
   lint_rules:
-    path: ../lint_rules
+    git:
+      url: git@github.com:KutilinSA/edu-app-core.git
+      path: lint_rules
+      ref: v0.0.1
