--- a/edu_models/pubspec.yaml
+++ b/edu_models/pubspec.yaml
@@ -10,7 +10,10 @@ environment:
 
 dependencies:
   edu_core:
-    path: ../edu_core
+    git:
+      url: git@github.com:KutilinSA/edu-app-core.git
+      path: edu_core
+      ref: v0.0.1
 
   equatable: 2.0.5
   flutter:
@@ -22,4 +25,7 @@ dev_dependencies:
   dependency_validator: 3.2.2
   json_serializable: 6.6.1
   lint_rules:
-    path: ../lint_rules
+    git:
+      url: git@github.com:KutilinSA/edu-app-core.git
+      path: lint_rules
+      ref: v0.0.1
