--- a/edu_ui_components/pubspec.yaml
+++ b/edu_ui_components/pubspec.yaml
@@ -10,11 +10,20 @@ environment:
 
 dependencies:
   edu_core:
-    path: ../edu_core
+    git:
+      url: git@github.com:KutilinSA/edu-app-core.git
+      path: edu_core
+      ref: v0.0.1
   edu_localizations:
-    path: ../edu_localizations
+    git:
+      url: git@github.com:KutilinSA/edu-app-core.git
+      path: edu_localizations
+      ref: v0.0.1
   edu_repositories:
-    path: ../edu_repositories
+    git:
+      url: git@github.com:KutilinSA/edu-app-core.git
+      path: edu_repositories
+      ref: v0.0.1
 
   equatable: 2.0.5
   extended_image: 6.3.4
@@ -31,7 +40,10 @@ dependencies:
 dev_dependencies:
   dependency_validator: 3.2.2
   lint_rules:
-    path: ../lint_rules
+    git:
+      url: git@github.com:KutilinSA/edu-app-core.git
+      path: lint_rules
+      ref: v0.0.1
 
 flutter:
   uses-material-design: true
