--- a/features/feature_models_list_provider/git_pubspec.yaml
+++ b/features/feature_models_list_provider/git_pubspec.yaml
@@ -16,6 +16,11 @@ dependencies:
       url: git@github.com:KutilinSA/edu-app-core.git
       path: edu_core
       ref: v0.0.1
+  edu_models:
+    git:
+      url: git@github.com:KutilinSA/edu-app-core.git
+      path: edu_models
+      ref: v0.0.1
   edu_repositories:
     git:
       url: git@github.com:KutilinSA/edu-app-core.git
@@ -24,7 +29,6 @@ dependencies:
 
   equatable: 2.0.5
   flutter_bloc: 8.1.1
-  json_annotation: 4.8.0
 
 dev_dependencies:
   build_runner: 2.3.3
