--- a/features/feature_models_list_provider/local_pubspec.yaml
+++ b/features/feature_models_list_provider/local_pubspec.yaml
@@ -13,12 +13,13 @@ dependencies:
 
   edu_core:
     path: ../../edu_core
+  edu_models:
+    path: ../../edu_models
   edu_repositories:
     path: ../../edu_repositories
 
   equatable: 2.0.5
   flutter_bloc: 8.1.1
-  json_annotation: 4.8.0
 
 dev_dependencies:
   build_runner: 2.3.3
