--- a/edu_localizations/pubspec.yaml
+++ b/edu_localizations/pubspec.yaml
@@ -18,7 +18,4 @@ dependencies:
 dev_dependencies:
   dependency_validator: 3.2.2
   lint_rules:
-    git:
-      url: git@github.com:KutilinSA/edu-app-core.git
-      path: lint_rules
-      ref: v0.0.1
+    path: ../lint_rules
