--- a/edu_models/pubspec.yaml
+++ b/edu_models/pubspec.yaml
@@ -19,7 +19,4 @@ dev_dependencies:
   dependency_validator: 3.2.2
   json_serializable: 6.6.1
   lint_rules:
-    git:
-      url: git@github.com:KutilinSA/edu-app-core.git
-      path: lint_rules
-      ref: v0.0.1
+    path: ../lint_rules
