--- a/features/feature_login/pubspec.yaml
+++ b/features/feature_login/pubspec.yaml
@@ -12,15 +12,9 @@ dependencies:
   bloc_concurrency: 0.2.0
 
   edu_core:
-    git:
-      url: git@github.com:KutilinSA/edu-app-core.git
-      path: edu_core
-      ref: v0.0.1
+    path: ../../edu_core
   edu_repositories:
-    git:
-      url: git@github.com:KutilinSA/edu-app-core.git
-      path: edu_repositories
-      ref: v0.0.1
+    path: ../../edu_repositories
 
   equatable: 2.0.5
   flutter_bloc: 8.1.1
@@ -29,7 +23,4 @@ dependencies:
 dev_dependencies:
   dependency_validator: 3.2.2
   lint_rules:
-    git:
-      url: git@github.com:KutilinSA/edu-app-core.git
-      path: lint_rules
-      ref: v0.0.1
+    path: ../../lint_rules
