--- a/edu_ui_components/pubspec.yaml
+++ b/edu_ui_components/pubspec.yaml
@@ -10,15 +10,11 @@ environment:
 
 dependencies:
   edu_core:
-    git:
-      url: git@github.com:KutilinSA/edu-app-core.git
-      path: edu_core
-      ref: v0.0.1
+    path: ../edu_core
   edu_localizations:
-    git:
-      url: git@github.com:KutilinSA/edu-app-core.git
-      path: edu_localizations
-      ref: v0.0.1
+    path: ../edu_localizations
+  edu_models:
+    path: ../edu_models
 
   equatable: 2.0.5
   extended_image: 6.3.4
@@ -33,10 +29,7 @@ dependencies:
 dev_dependencies:
   dependency_validator: 3.2.2
   lint_rules:
-    git:
-      url: git@github.com:KutilinSA/edu-app-core.git
-      path: lint_rules
-      ref: v0.0.1
+    path: ../lint_rules
 
 flutter:
   uses-material-design: true
