--- a/features/feature_models_list_provider/pubspec.yaml
+++ b/features/feature_models_list_provider/pubspec.yaml
@@ -12,20 +12,11 @@ dependencies:
   bloc_concurrency: 0.2.0
 
   edu_core:
-    git:
-      url: git@github.com:KutilinSA/edu-app-core.git
-      path: edu_core
-      ref: v0.0.1
+    path: ../../edu_core
   edu_models:
-    git:
-      url: git@github.com:KutilinSA/edu-app-core.git
-      path: edu_models
-      ref: v0.0.1
+    path: ../../edu_models
   edu_repositories:
-    git:
-      url: git@github.com:KutilinSA/edu-app-core.git
-      path: edu_repositories
-      ref: v0.0.1
+    path: ../../edu_repositories
 
   equatable: 2.0.5
   flutter_bloc: 8.1.1
@@ -35,7 +26,4 @@ dev_dependencies:
   dependency_validator: 3.2.2
   json_serializable: 6.6.1
   lint_rules:
-    git:
-      url: git@github.com:KutilinSA/edu-app-core.git
-      path: lint_rules
-      ref: v0.0.1
+    path: ../../lint_rules
