--- a/features/feature_settings/pubspec.yaml
+++ b/features/feature_settings/pubspec.yaml
@@ -12,15 +12,9 @@ dependencies:
   bloc_concurrency: 0.2.0
 
   edu_core:
-    git:
-      url: git@github.com:KutilinSA/edu-app-core.git
-      path: edu_core
-      ref: v0.0.1
+    path: ../../edu_core
   edu_services:
-    git:
-      url: git@github.com:KutilinSA/edu-app-core.git
-      path: edu_services
-      ref: v0.0.1
+    path: ../../edu_services
 
   equatable: 2.0.5
   flutter_bloc: 8.1.1
@@ -28,7 +22,4 @@ dependencies:
 dev_dependencies:
   dependency_validator: 3.2.2
   lint_rules:
-    git:
-      url: git@github.com:KutilinSA/edu-app-core.git
-      path: lint_rules
-      ref: v0.0.1
+    path: ../../lint_rules
