--- a/edu_ui_components/git_pubspec.yaml
+++ b/edu_ui_components/git_pubspec.yaml
@@ -30,8 +30,10 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: 8.1.1
+  flutter_datetime_picker: 1.5.1
   flutter_staggered_grid_view: 0.6.2
   freezed_annotation: 2.2.0
+  intl: 0.17.0
   keyboard_utils: 1.3.4
   pin_code_fields: 7.4.0
   shimmer: 2.0.0
