--- a/edu_services/pubspec.yaml
+++ b/edu_services/pubspec.yaml
@@ -12,9 +12,15 @@ dependencies:
   dio: 4.0.6
 
   edu_core:
-    path: ../edu_core
+    git:
+      url: git@github.com:KutilinSA/edu-app-core.git
+      path: edu_core
+      ref: v0.0.1
   edu_models:
-    path: ../edu_models
+    git:
+      url: git@github.com:KutilinSA/edu-app-core.git
+      path: edu_models
+      ref: v0.0.1
 
   equatable: 2.0.5
   flutter:
@@ -29,4 +35,7 @@ dev_dependencies:
   dependency_validator: 3.2.2
   drift_dev: 2.5.2
   lint_rules:
-    path: ../lint_rules
+    git:
+      url: git@github.com:KutilinSA/edu-app-core.git
+      path: lint_rules
+      ref: v0.0.1
