--- a/features/feature_authentication/pubspec.yaml
+++ b/features/feature_authentication/pubspec.yaml
@@ -10,9 +10,15 @@ environment:
 
 dependencies:
   edu_core:
-    path: ../../edu_core
+    git:
+      url: git@github.com:KutilinSA/edu-app-core.git
+      path: edu_core
+      ref: v0.0.1
   edu_services:
-    path: ../../edu_services
+    git:
+      url: git@github.com:KutilinSA/edu-app-core.git
+      path: edu_services
+      ref: v0.0.1
 
   equatable: 2.0.5
   flutter_bloc: 8.1.1
@@ -20,4 +26,7 @@ dependencies:
 dev_dependencies:
   dependency_validator: 3.2.2
   lint_rules:
-    path: ../../lint_rules
+    git:
+      url: git@github.com:KutilinSA/edu-app-core.git
+      path: lint_rules
+      ref: v0.0.1
