--- a/features/feature_model_provider/pubspec.yaml
+++ b/features/feature_model_provider/pubspec.yaml
@@ -12,11 +12,20 @@ dependencies:
   bloc_concurrency: 0.2.0
 
   edu_core:
-    path: ../../edu_core
+    git:
+      url: git@github.com:KutilinSA/edu-app-core.git
+      path: edu_core
+      ref: v0.0.1
   edu_models:
-    path: ../../edu_models
+    git:
+      url: git@github.com:KutilinSA/edu-app-core.git
+      path: edu_models
+      ref: v0.0.1
   edu_repositories:
-    path: ../../edu_repositories
+    git:
+      url: git@github.com:KutilinSA/edu-app-core.git
+      path: edu_repositories
+      ref: v0.0.1
 
   equatable: 2.0.5
   flutter_bloc: 8.1.1
@@ -26,4 +35,7 @@ dev_dependencies:
   dependency_validator: 3.2.2
   json_serializable: 6.6.1
   lint_rules:
-    path: ../../lint_rules
+    git:
+      url: git@github.com:KutilinSA/edu-app-core.git
+      path: lint_rules
+      ref: v0.0.1
