--- a/features/feature_process_application/pubspec.yaml
+++ b/features/feature_process_application/pubspec.yaml
@@ -10,9 +10,15 @@ environment:
 
 dependencies:
   edu_models:
-    path: ../../edu_models
+    git:
+      url: git@github.com:KutilinSA/edu-app-core.git
+      path: edu_models
+      ref: v0.0.1
   edu_repositories:
-    path: ../../edu_repositories
+    git:
+      url: git@github.com:KutilinSA/edu-app-core.git
+      path: edu_repositories
+      ref: v0.0.1
 
   equatable: 2.0.5
   flutter_bloc: 8.1.1
@@ -20,4 +26,7 @@ dependencies:
 dev_dependencies:
   dependency_validator: 3.2.2
   lint_rules:
-    path: ../../lint_rules
+    git:
+      url: git@github.com:KutilinSA/edu-app-core.git
+      path: lint_rules
+      ref: v0.0.1
